feat(tarea1): añadir comentarios y hacer cambios (tarea2 git)

--- a/administracion.html
+++ b/administracion.html
@@ -13,7 +13,7 @@
 
 <body class="administracion-body">
 
-
+<!--Menú-->
   <aside class="sidebar">
     <div class="text-center mb-4">
       <a href="home.html">
@@ -21,6 +21,7 @@
       </a>
       <h4 class="mt-2 text-white">Administración</h4>
     </div>
+    <!--Tooltips-->
     <nav>
       <ul class="list-unstyled">
         <li>
@@ -40,6 +41,7 @@
 
   <main class="content">
 
+<!--Breadcrumb-->
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb bg-light p-2 rounded">
         <li class="breadcrumb-item"><a href="home.html">Inicio</a></li>
@@ -47,7 +49,7 @@
       </ol>
     </nav>
 
-
+<!--Botón y modal-->
     <section class="my-4">
       <div class="d-flex justify-content-between align-items-center mb-3">
         <h4>Restaurantes</h4>
@@ -55,12 +57,13 @@
           <i class="fas fa-plus me-1"></i> Dar de alta local
         </button>
       </div>
+<!--Tabla-->
       <div class="table-responsive">
         <table class="table table-striped align-middle">
           <thead class="table-light">
             <tr>
               <th>ID</th>
-              <th>Dirección</th>
+              <th>Nombre</th>
               <th>Email</th>
               <th>Acciones</th>
             </tr>
@@ -110,17 +113,17 @@
       </div>
     </section>
 
-
+<!--Barra de progreso-->
     <section class="mb-4">
       <h4>Actualmente abiertos</h4>
       <div class="progress">
         <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-          70%
+          67%
         </div>
       </div>
     </section>
 
-
+<!--Popover-->
     <section class="mb-4">
       <button type="button" class="boton" data-bs-toggle="popover" title="Información" data-bs-content="Actualmente nuestro establecimiento de Mutilva está cerrado por reforma.">
         <i class="fas fa-info-circle me-1"></i> Información
@@ -128,7 +131,7 @@
     </section>
   </main>
 
-
+<!--Modal a abrir con el botón-->
   <div class="modal fade" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -156,7 +159,7 @@
     </div>
   </div>
 
-
+<!--Scripts-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
